Arreglando la estructura de ficheros