@@ -1,12 +1,26 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '4.0.0'
-    id 'io.spring.dependency-management' version '1.1.7'
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.14'
 }
 
-group = 'GroovyStudios.Groovyships'
-version = '0.0.1-SNAPSHOT'
-description = 'client'
+group = 'GroovyStudios.client'
+version = '0.0.1'
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    // Cliente HTTP (sin Spring Boot)
+    implementation 'org.springframework:spring-web:6.1.3'
+
+    // JavaFX
+    implementation 'org.openjfx:javafx-controls:23'
+    implementation 'org.openjfx:javafx-fxml:23'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
+}
 
 java {
     toolchain {
@@ -14,16 +28,24 @@ java {
     }
 }
 
-repositories {
-    mavenCentral()
+javafx {
+    version = "23"
+    modules = ['javafx.controls', 'javafx.fxml']
 }
 
-dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+application {
+    mainClass = 'client.App'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+run {
+    doFirst {
+        jvmArgs = [
+                '--module-path', configurations.runtimeClasspath.files.join(File.pathSeparator),
+                '--add-modules', 'javafx.controls,javafx.fxml'
+        ]
+    }
 }
